# Put the db files in a subdirectory of pkgdatadir
dbdir = $(pkgdatadir)/db

nobase_dist_db_DATA = \
	cs/postgresql/data.sql \
	cs/postgresql/disable_lockdown.sql \
	cs/postgresql/enable_lockdown.sql \
	cs/postgresql/schema.sql \
	cs/postgresql/update-1.sql \
	cs/postgresql/update-2.sql \
	cs/postgresql/update-3.sql \
	cs/postgresql/update-4.sql \
	cs/postgresql/update-5.sql \
	cs/postgresql/update-6.sql \
	cs/postgresql/update-7.sql \
	cs/postgresql/update-8.sql \
	logging/postgresql/schema.sql \
	logging/postgresql/update-1.sql \
	logging/postgresql/update-2.sql \
	logging/postgresql/update-3.sql \
	ma/postgresql/data.sql \
	ma/postgresql/schema.sql \
	ma/postgresql/update-1.sql \
	ma/postgresql/update-2.sql \
	ma/postgresql/update-3.sql \
	ma/postgresql/update-4.sql \
	ma/postgresql/update-5.sql \
	migration/migrate-assertions.sql \
	migration/sliver-info.sql \
	pa/postgresql/schema.sql \
	pa/postgresql/update-1.sql \
	pa/postgresql/update-2.sql \
	pa/postgresql/update-3.sql \
	pa/postgresql/update-4.sql \
	pa/postgresql/update-5.sql \
	sa/postgresql/README.txt \
	sa/postgresql/schema.sql \
	sa/postgresql/update-1.sql \
	sa/postgresql/update-2.sql \
	sa/postgresql/update-3.sql \
	sr/postgresql/README.txt \
	sr/postgresql/schema.sql \
	sr/postgresql/update-1.sql \
	sr/postgresql/update-2.sql \
	sr/postgresql/update-3.sql \
	sr/postgresql/update-4.sql \
	sr/postgresql/update-5.sql
