# Where to put templates
templatesdir = $(pkgdatadir)/templates

dist_templates_DATA = \
	abac_credential.xml.tmpl \
	apache2.conf.tmpl \
	ch-ssl.conf.tmpl \
	chapi.ini.tmpl \
	httpd.conf.tmpl \
	install_postgresql.sh \
	install_service_registry.sql.tmpl \
	openssl.cnf.tmpl \
	services.ini.tmpl \
	templates.json 
