# TODO: change this to a more sane directory like
#       $(pkgdatadir)/tools where $pkgdatadir is
#       /usr/share/geni-chapi or similar
tooldir = $(pkgdatadir)/../geni-ch/chapi/chapi/tools

# TODO: Weed out unnecessary files from install.
#       Candidates include any file that doesn't end
#       in '.py'


dist_tool_DATA = \
	ABACManager.py \
	CH_constants.py \
	MA_constants.py \
	SA_constants.py \
	SpeaksFor.py \
	__init__.py \
	cert_registry.py \
	cert_utils.py \
	ch_server.py \
	ch_server.wsgi \
	chapi_log.py \
	chapi_utils.py \
	client.py \
	cs_utils.py \
	dbtest.py \
	dbutils.py \
	file_checker.py \
	geni_constants.py \
	geni_utils.py \
	guard_utils.py \
	mapped_tables.py \
	manage_service_attributes.py \
	multiclient.py \
	pluginmanager.py \
	policy_file_checker.py \
	portal_client.py 

dist_tool_SCRIPTS = \
	install_ch \
	install_chapi \
	install_db \
	testall.sh
