# TODO: change this to a more sane directory like
#       $(pkgdatadir)/plugins where $pkgdatadir is
#       /usr/share/geni-chapi or similar
plugindir = $(pkgdatadir)/../geni-ch/chapi/chapi/plugins

nobase_dist_plugin_DATA = \
	chapiv1rpc/MANIFEST.json \
	chapiv1rpc/__init__.py \
	chapiv1rpc/chapi/Clearinghouse.py \
	chapiv1rpc/chapi/DelegateBase.py \
	chapiv1rpc/chapi/Exceptions.py \
	chapiv1rpc/chapi/GuardBase.py \
	chapiv1rpc/chapi/HandlerBase.py \
	chapiv1rpc/chapi/MemberAuthority.py \
	chapiv1rpc/chapi/Memoize.py \
	chapiv1rpc/chapi/Parameters.py \
	chapiv1rpc/chapi/SliceAuthority.py \
	chapiv1rpc/chapi/__init__.py \
	chapiv1rpc/plugin.py \
	chrm/ABACGuard.py \
	chrm/ArgumentCheck.py \
	chrm/CHDatabaseEngine.py \
	chrm/CHv1Guard.py \
	chrm/CHv1Implementation.py \
	chrm/CHv1PersistentImplementation.py \
	chrm/MANIFEST.json \
	chrm/ServiceRegistry.py \
	chrm/plugin.py \
	csrm/CredentialStore.py \
	csrm/MANIFEST.json \
	csrm/plugin.py \
	logging/Logging.py \
	logging/MANIFEST.json \
	logging/plugin.py \
	marm/MANIFEST.json \
	marm/MAv1Guard.py \
	marm/MAv1Implementation.py \
	marm/plugin.py \
	pgch/MANIFEST.json \
	pgch/PGCH.py \
	pgch/__init__.py \
	pgch/plugin.py \
	sarm/MANIFEST.json \
	sarm/SAv1Guard.py \
	sarm/SAv1PersistentImplementation.py \
	sarm/plugin.py
