# TODO: change this to a more sane directory like
#       $(pkgdatadir)/tools where $pkgdatadir is
#       /usr/share/geni-chapi or similar
tooldir = $(pkgdatadir)/../geni-ch/chapi/chapi/tools

# Destination of example files
exampledir = $(pkgdatadir)/../geni-ch/

# TODO: Weed out unnecessary files from install.
#       Candidates include any file that doesn't end
#       in '.py'


dist_tool_DATA = \
	ABACManager.py \
	MA_constants.py \
	SA_constants.py \
	SpeaksFor.py \
	__init__.py \
	cert_utils.py \
	chapi_log.py \
	chapi_utils.py \
	client.py \
	cs_utils.py \
	dbtest.py \
	dbutils.py \
	geni_constants.py \
	geni_utils.py \
	guard_utils.py \
	mapped_tables.py \
	multiclient.py \
	pgch_client.py

dist_tool_SCRIPTS = \
	.bashrc \
	install_ch \
	install_chapi \
	install_db \
	pgch_testall.sh \
	testall.sh

dist_example_SCRIPTS = \
	.bashrc
